# decline-curve-analysis

./: Cargo.toml  README.md
benches/: simple.rs
src/: decline_rate.rs  delay.rs  exponential.rs  flat.rs  harmonic.rs  hyperbolic.rs  lib.rs  linear.rs
tests/: decline_rate_conversions.rs  delay.rs  exponential.rs  flat.rs  harmonic.rs  hyperbolic.rs  linear.rs
