[package]
name = "decline-curve-analysis"
version = "0.4.0"
description = "Utilities for decline curve analysis (e.g., Arps equations)"
authors = ["Joshua Groves <josh@joshgroves.com>"]
repository = "https://github.com/pod2co/decline-curve-analysis"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
thiserror = "2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
insta = { version = "1.43", features = ["ron"] }

[[bench]]
name = "simple"
harness = false
